# morse

./: CMakeLists.txt  README.md
include/: morse.h
src/: main.c  morse.c  morse_tables.c
